# super-clone

./: .gitignore  Cargo.toml  Dockerfile  README.md  SETUP.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
docs/: QUICK-START.md
examples/: basic_usage.rs
src/: lib.rs  main.rs
src/database/: mod.rs
src/git/: mod.rs
src/models/: mod.rs
src/providers/: github.rs  gitlab.rs  mod.rs
src/tui/: mod.rs
tests/: integration_tests.rs
