[package]
name = "super-clone"
version = "0.1.0"
edition = "2021"
authors = ["pnstack"]
description = "A CLI and TUI tool to clone and manage repositories from GitHub and GitLab"
license = "MIT OR Apache-2.0"
repository = "https://github.com/npsg02/super-clone"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
ratatui = "0.24"
crossterm = "0.27"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
url = "2.5"
dirs = "5.0"
indicatif = "0.17"
async-trait = "0.1"
